--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 
 
-	<button onclick="getImage()">Get image</button>
-	<p>Image here:</p>
+	<p>Get Image: <input type="text" oninput="getImage()" onclick="event.target.select()"></p>
 	<div id="image"></div>
 
 
